<resources>
    <string name="app_name">淘佳教</string>
    <string name="tel">手机号码</string>
    <string name="message_code">短信验证码</string>
    <string name="passwd">密码</string>
    <string name="sex">性别</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="location">位置</string>
    <string name="area_activity_display">活动展示</string>
    <string name="area_seniorHigh">高中家教</string>
    <string name="area_juniorHigh">初中家教</string>
    <string name="area_primarySchool">小学家教</string>
    <string name="area_art">艺术</string>
    <string name="area_article">学习方法</string>
    <string name="area_recommendation">金牌名师</string>
    <string name="action_settings">Settings</string>
    <string name="scanOneScan_n">扫一扫</string>
    <string name="inviteFriend_n">邀请朋友</string>
    <string name="wantQuestion_n">我要提问</string>
    <string name="sign_n">签到</string>
    <string name="todaySign_n">今日未签到</string>
    <string name="discover_n">发现</string>
    <string name="thirdAuthentication_n">社交账号绑定</string>
    <string name="suggestionFeedback_n">意见反馈</string>
    <string name="wallet_n">钱包</string>
    <string name="coupon_n">优惠券</string>
    <string name="teacherComment_n">老师评语</string>
    <string name="atOnceLogin_n">立即登录</string>
    <string name="localling_n">定位中...</string>
    <string name="basic_infomation_n">基本信息</string>
    <string name="position_with_colon_n">位置:</string>
    <string name="certification_with_colon_n">认证:</string>
    <string name="speciality_with_colon_n">特点:</string>
    <string name="all_courses_n">全部课程</string>
    <string name="course_coupon_n">课程优惠券</string>
    <string name="experince_n">过往经历</string>
    <string name="all_experince_n">全部经历</string>
    <string name="achievment_n">成果分享</string>
    <string name="all_achievments_n">全部成果</string>
    <string name="album">相册</string>
    <string name="all_video_photo">全部视频/照片</string>
    <string name="teacher_more_info_n">查看老师图文详情</string>
    <string name="all_comment_n">全部评价</string>
    <string name="genshuixue_id_n">跟谁学ID</string>
    <string name="qrcode_idcard_n">二维码名片</string>
    <string name="titlepostfix_n">\@跟谁学</string>
    <string name="share_n">分享</string>
    <string name="saveToAlbum_n">保存到相册</string>
    <string name="customerServiceHint_n">拨打客服电话 4000-910-910</string>
    <string name="callTeacher_n">请老师电话联系我</string>
    <string name="callServer_n">前去咨询客服</string>
    <string name="refundAnytime_n">随时退</string>
    <string name="textHint">当前温柔可爱又万能的客服MM也可以为你解答疑问，赶快去咨询</string>
    <string name="nocomment_n">还没有任何评价~</string>
    <string name="allHistoryCourse_n">所有历史课程</string>
    <string name="collect_n">收藏</string>
    <string name="chat_n">聊天</string>
    <string name="helpFindTeacher_n">帮我找老师</string>
    <string name="pleasechoose_n">请选择</string>
    <string name="subject_n">科目:</string>
    <string name="sex_n">性别:</string>
    <string name="classprice_n">课酬:</string>
    <string name="type_n">方式:</string>
    <string name="address_n">地址:</string>
    <string name="describe_n">描述:</string>
    <string name="chooseTeacher_n">选择老师</string>
    <string name="compareTeacher_n">比较老师</string>
    <string name="snatchFinish">推荐完成</string>
    <string name="snatchIng">推荐中...</string>
    <string name="learnWithHim">跟TA学</string>
    <string name="buyCourse">购买课程</string>
    <string name="publishSuccess">发布成功，已经开始帮你找啦</string>
    <string name="cancel">取消</string>
    <string name="finish">完成</string>
    <string name="sharing">分享操作正在后台进行…</string>
    <string name="share_to">分享到</string>
    <string name="share">分享</string>
    <string name="multi_share">图文分享</string>
    <string name="share_completed">分享成功</string>
    <string name="share_canceled">分享已取消</string>
    <string name="select_one_plat_at_least">请选择一个目标平台</string>
    <string name="list_friends">%s的朋友</string>
    <string name="share_failed">分享失败</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">松开刷新</string>
    <string name="refreshing">刷新中…</string>
    <string name="shake2share">摇晃手机！</string>
    <string name="select_a_friend">请选择一个朋友</string>
    <string name="weibo_oauth_regiseter">应用授权</string>
    <string name="website">http://www.mob.com</string>
    <string name="weibo_upload_content">分享图片</string>
    <string name="wechat_client_inavailable">目前您的微信版本过低或未安装微信，需要安装微信才能使用</string>
    <string name="google_plus_client_inavailable">Google+ 版本过低或者没有安装，需要升级或安装Google+才能使用！</string>
    <string name="qq_client_inavailable">QQ 版本过低或者没有安装，需要升级或安装QQ才能使用！</string>
    <string name="pinterest_client_inavailable">Pinterest版本过低或者没有安装，需要升级或安装Pinterest才能使用！</string>
    <string name="instagram_client_inavailable">Instagram版本过低或者没有安装，需要升级或安装Instagram才能使用！</string>
    <string name="yixin_client_inavailable">目前您的易信版本过低或未安装，需要安装易信才能使用</string>
    <string name="line_client_inavailable">目前您的Line版本过低或未安装，需要安装Line才能使用</string>
    <string name="kakaotalk_client_inavailable">目前您的KakaoTalk版本过低或未安装，需要安装KakaoTalk才能使用</string>
    <string name="kakaostory_client_inavailable">目前您的KakaoStory版本过低或未安装，需要安装KakaoStory才能使用</string>
    <string name="whatsapp_client_inavailable">目前您的WhatsApp版本过低或未安装，需要安装WhatsApp才能使用</string>
    <string name="baidutieba_client_inavailable">目前您的百度贴吧版本过低或未安装，需要安装百度贴吧才能使用</string>
    <string name="sinaweibo">新浪微博</string>
    <string name="tencentweibo">腾讯微博</string>
    <string name="qzone">QQ空间</string>
    <string name="wechat">微信好友</string>
    <string name="wechatmoments">微信朋友圈</string>
    <string name="wechatfavorite">微信收藏</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="renren">人人网</string>
    <string name="kaixin">开心网</string>
    <string name="email">邮件</string>
    <string name="shortmessage">信息</string>
    <string name="sohumicroblog">搜狐微博</string>
    <string name="sohusuishenkan">搜狐随身看</string>
    <string name="neteasemicroblog">网易微博</string>
    <string name="douban">豆瓣</string>
    <string name="youdao">有道云笔记</string>
    <string name="evernote">印象笔记</string>
    <string name="linkedin">领英</string>
    <string name="googleplus">Google+</string>
    <string name="foursquare">FourSquare</string>
    <string name="qq">QQ</string>
    <string name="pinterest">Pinterest</string>
    <string name="flickr">Flickr</string>
    <string name="tumblr">Tumblr</string>
    <string name="dropbox">Dropbox</string>
    <string name="vkontakte">VK</string>
    <string name="instagram">Instagram</string>
    <string name="yixin">易信</string>
    <string name="yixinmoments">易信朋友圈</string>
    <string name="mingdao">明道</string>
    <string name="kakaotalk">KakaoTalk</string>
    <string name="kakaostory">KakaoStory</string>
    <string name="line">Line</string>
    <string name="bluetooth">蓝牙</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="pocket">Pocket</string>
    <string name="instapaper">Instapaper</string>
    <string name="instapaper_email">邮箱</string>
    <string name="instapaper_pwd">密码</string>
    <string name="instapaper_login">登录</string>
    <string name="instapaper_logining">登录中…</string>
    <string name="instapager_email_or_password_incorrect">Email或密码不正确</string>
    <string name="facebookmessenger">Facebook Messenger</string>
    <string name="baidutieba">百度贴吧</string>
    <string name="share_to_baidutieba">分享到百度贴吧</string>
    <string name="share_to_qzone">分享到QQ空间</string>
    <string name="share_to_qq">分享到QQ</string>
    <string name="mingdao_share_content">网页分享</string>
    <string name="share_to_mingdao">分享到明道</string>
    <string name="share_to_qzone_default">来自%s的分享</string>
    <string name="use_login_button">请改用“登录”按钮</string>
    <string name="teacher">老师</string>
    <string name="teachYear">教龄:</string>
    <string name="distance">地址:</string>
    <string name="speciality">特长:</string>
    <string name="search">搜索</string>
    <string name="changeCity">切换城市</string>
    <string name="current">当前</string>
    <string name="addBankCard">添加银行卡</string>
    <string name="confirmLearning">确认上课</string>
    <string name="waitConfirmLearning">待确认上课</string>
    <string name="hotCity">热门城市</string>
    <string name="allType">所有分类</string>
    <string name="confirmCancle">确定取消</string>
    <string name="confirmAppeal">确定申诉</string>
    <string name="close">关闭</string>
    <string name="accurateWithDiscribe">描述相符</string>
    <string name="teachAttitude">教学态度</string>
    <string name="reflectSpeed">响应速度</string>
    <string name="from">来自:</string>
    <string name="zero">(0)</string>
    <string name="checkDetail">查看详情</string>
    <string name="reportNow">立即报名</string>
    <string name="ling">0</string>
    <string name="waitConfirmAppointCourse">待确认约课</string>
    <string name="waitConfirmPay">待确认课酬</string>
    <string name="haveLearning">已上课</string>
    <string name="address">地址:</string>
    <string name="finished">已结束</string>
    <string name="moneyHour">元/小时起</string>
    <string name="orderDetail">订单详情</string>
    <string name="courseTotalHoursWithColon">课程总时长:</string>
    <string name="inAppealing">申诉中...</string>
    <string name="teachRange">授课范围:</string>
    <string name="all">全部</string>
    <string name="studyType">上课方式:</string>
    <string name="studyTime">上课时间:</string>
    <string name="sort">排序</string>
    <string name="screen">筛选</string>
    <string name="comprehensiveRanking">综合排序</string>
    <string name="popularityRanking">人气排序</string>
    <string name="priceByAsc">价格由低到高排序</string>
    <string name="priceByAsc2">价低到高</string>
    <string name="priceByDesc">价格由高到低排序</string>
    <string name="priceByDesc2">价高到低</string>
    <string name="commentCourse">评价课程</string>
    <string name="moreType">更多类别</string>
    <string name="nearestToYou">最新入驻</string>
    <string name="startTeacher">名师推荐</string>
    <string name="beiJing">北京</string>
    <string name="searchSubjectOrTeacher">搜索学科或教师名字</string>
    <string name="index">首页</string>
    <string name="message">消息</string>
    <string name="courseTimetable">课表</string>
    <string name="mine">我</string>
    <string name="commentRanking">评论数排序</string>
    <string name="sortByDistance">离我最近</string>
    <string name="sortByDistance2">距离排序</string>
    <string name="commentRanking2">评论排序</string>
    <string name="alllimit">综合不限</string>
    <string name="studentTotal">学生总数</string>
    <string name="teachTotalHour">累计教学</string>
    <string name="goodReputation">好评率</string>
    <string name="safeguardCertifacation">保障认证</string>
    <string name="courseDetails">课程详情:</string>
    <string name="consultTeacher">咨询老师</string>
    <string name="makeAppointmentCourse">向ta约课</string>
    <string name="personnalInfo">个人资料</string>
    <string name="serviceTel">4000 910 910</string>
    <string name="inputNewPass">请输入新密码</string>
    <string name="getVirifyCode">获取验证码</string>
    <string name="courseInfo">课程信息</string>
    <string name="yourInfo">您的信息</string>
    <string name="Name">姓名:</string>
    <string name="phone">电话:</string>
    <string name="recommendForMe">帮我推荐</string>
    <string name="cancleOrder">取消订单</string>
    <string name="passwordTip">密码由6-20位英文字母、数字或者符号组成</string>
    <string name="confirmModify">确认修改</string>
    <string name="other">其他</string>
    <string name="chooseCancleReason">请选择取消原因</string>
    <string name="cancleReasonThree">对老师不满意</string>
    <string name="cancleOrderReasonOne">下错单了</string>
    <string name="cancleOrderReasonTwo">无法与老师达成一致</string>
    <string name="boundPhoneNumColon">已绑定手机号:</string>
    <string name="payresult">支付结果</string>
    <string name="againpay">再次支付</string>
    <string name="cancelpay">取消支付</string>
    <string name="yuecalss">向老师约课</string>
    <string name="paiclass">请老师排课</string>
    <string name="or">或</string>
    <string name="watchOrderdetail">查看订单详情</string>
    <string name="balance_warn">请您确保银行卡信息，短信验证码等信息输入正确。个别银行存在单笔最大限额，请勿超出限额支付</string>
</resources>