<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--定义顶部栏-->
    <TableRow>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="武汉"
            style="@style/style1"/>
        <Button
            android:drawableLeft="@drawable/magnifier2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            style="@style/style1"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            style="@style/style1"/>
    </TableRow>

    <LinearLayout
        android:background="#0df"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <Button
                android:background="@drawable/button_border1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:lines="2"
                android:text="@string/area_seniorHigh"/>
            <Button
                android:background="@drawable/button_border1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:lines="2"
                android:text="@string/area_juniorHigh"/>
            <Button
                android:background="@drawable/button_border1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:lines="2"
                android:text="@string/area_primarySchool"/>
            <Button
                android:background="@drawable/button_border1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:lines="2"
                android:text="@string/area_art"/>
        </TableLayout>

        <TableLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <Button
                android:background="@drawable/button_border1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:lines="7"
                android:text="@string/area_recommendation"/>
            <Button
                android:background="@drawable/button_border1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:lines="4"
                android:text="@string/area_article"/>
        </TableLayout>

    </LinearLayout>

</LinearLayout>
