<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/grey_white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/titlebar_with_back" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="5.0dip" android:layout_marginBottom="5.0dip">
        <TextView android:textSize="12.0sp" android:textColor="@color/low_black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/boundPhoneNumColon" android:singleLine="true" />
        <TextView android:textSize="12.0sp" android:textStyle="bold" android:textColor="@color/middle_black" android:id="@id/activity_modify_login_password_txt_phone" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="44.0dip" android:layout_marginBottom="5.0dip">
        <EditText android:id="@id/activity_modify_login_password_edit_virifyCode" android:background="@drawable/shape_circle_corner_white_stroke_grey" android:padding="4.0dip" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginLeft="5.0dip" android:layout_marginRight="10.0dip" android:cursorVisible="true" android:singleLine="true" android:maxLength="6" android:layout_weight="1.0" />
        <Button android:textSize="12.0sp" android:textColor="@color/white" android:id="@id/activity_modify_login_password_btn_getCode" android:background="@drawable/style_btn_register" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:layout_width="100.0dip" android:layout_height="fill_parent" android:layout_marginRight="5.0dip" android:text="@string/getVirifyCode" />
    </LinearLayout>
    <TextView android:textSize="12.0sp" android:textColor="@color/low_black" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/passwordTip" />
    <EditText android:textSize="14.0sp" android:id="@id/activity_modify_login_password_edit_password" android:background="@drawable/shape_circle_corner_white_stroke_grey" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="44.0dip" android:layout_margin="5.0dip" android:hint="@string/inputNewPass" android:cursorVisible="true" android:singleLine="true" android:maxLength="20" android:inputType="textPassword" />
    <Button android:textColor="@color/white" android:id="@id/activity_modify_login_password_btn_confirm" android:background="@drawable/shape_circle_corner_transparent_orange" android:clickable="false" android:layout_width="fill_parent" android:layout_height="44.0dip" android:layout_margin="5.0dip" android:text="@string/confirmModify" />
    <TextView android:id="@id/activity_modify_login_password_txt_voiceCode" android:background="@drawable/ic_expression_no" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="70.0dip" android:layout_margin="5.0dip" />
</LinearLayout>