<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/shape_circle_corner_white" android:layout_width="270.0dip" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="18.0sp" android:textColor="@color/middle_black" android:gravity="center" android:id="@id/activity_cancle_order_txt_title" android:layout_width="fill_parent" android:layout_height="50.0dip" android:text="@string/cancleOrder" />
    <TextView android:textSize="14.0sp" android:textColor="@color/low_black" android:id="@id/activity_cancle_order_txtlable_cancle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="23.0dip" android:layout_marginBottom="5.0dip" android:text="@string/chooseCancleReason" />
    <LinearLayout android:orientation="vertical" android:id="@id/activity_cancle_order_reasonContainer" android:background="@drawable/shape_circle_corner_white_stroke_orange" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="23.0dip" android:layout_marginRight="23.0dip">
        <RelativeLayout android:id="@id/activity_cancle_order_reasonOne" android:layout_width="fill_parent" android:layout_height="44.0dip">
            <TextView android:textSize="14.0sp" android:textColor="@color/middle_black" android:id="@id/activity_cancle_order_reasonOne_txt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/cancleOrderReasonTwo" android:layout_centerVertical="true" />
            <TextView android:id="@id/activity_cancle_order_reasonOne_pigeon" android:background="@drawable/btn_deepblue_fine_tick" android:visibility="invisible" android:layout_width="15.0dip" android:layout_height="10.0dip" android:layout_marginRight="10.0dip" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        </RelativeLayout>
        <TextView android:id="@id/activity_cancle_order_reasonTop_line" android:background="@color/orange_yellow" android:layout_width="fill_parent" android:layout_height="1.0px" />
        <RelativeLayout android:id="@id/activity_cancle_order_reasonTwo" android:layout_width="fill_parent" android:layout_height="44.0dip">
            <TextView android:textSize="14.0sp" android:textColor="@color/middle_black" android:id="@id/activity_cancle_order_reasonTwo_txt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/cancleOrderReasonOne" android:layout_centerVertical="true" />
            <TextView android:id="@id/activity_cancle_order_reasonTwo_pigeon" android:background="@drawable/btn_deepblue_fine_tick" android:visibility="invisible" android:layout_width="15.0dip" android:layout_height="10.0dip" android:layout_marginRight="10.0dip" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        </RelativeLayout>
        <TextView android:id="@id/activity_cancle_order_reasonMiddle_line" android:background="@color/orange_yellow" android:layout_width="fill_parent" android:layout_height="1.0px" />
        <RelativeLayout android:id="@id/activity_cancle_order_reasonThree" android:layout_width="fill_parent" android:layout_height="44.0dip">
            <TextView android:textSize="14.0sp" android:textColor="@color/middle_black" android:id="@id/activity_cancle_order_reasonThree_Txt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/cancleReasonThree" android:layout_centerVertical="true" />
            <TextView android:id="@id/activity_cancle_order_reasonThree_pigeon" android:background="@drawable/btn_deepblue_fine_tick" android:visibility="invisible" android:layout_width="15.0dip" android:layout_height="10.0dip" android:layout_marginRight="10.0dip" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        </RelativeLayout>
        <TextView android:id="@id/activity_cancle_order_reasonBottom_line" android:background="@color/orange_yellow" android:layout_width="fill_parent" android:layout_height="1.0px" />
        <RelativeLayout android:id="@id/activity_cancle_order_reasonFour" android:layout_width="fill_parent" android:layout_height="44.0dip">
            <TextView android:textSize="14.0sp" android:textColor="@color/middle_black" android:id="@id/activity_cancle_order_reasonFour_txt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/other" android:layout_centerVertical="true" />
            <TextView android:id="@id/activity_cancle_order_reasonFour_pigeon" android:background="@drawable/btn_deepblue_fine_tick" android:visibility="invisible" android:layout_width="15.0dip" android:layout_height="10.0dip" android:layout_marginRight="10.0dip" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        </RelativeLayout>
    </LinearLayout>
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="23.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="23.0dip" android:layout_marginBottom="20.0dip">
        <Button android:textSize="14.0sp" android:textColor="@color/white" android:id="@id/activity_cancle_order_btn_close" android:background="@drawable/style_btn_register" android:layout_width="107.0dip" android:layout_height="34.0dip" android:text="@string/close" />
        <Button android:textSize="14.0sp" android:textColor="@color/middle_black" android:id="@id/activity_cancle_order_btn_confirmCancle" android:background="@drawable/style_btn_cancle" android:layout_width="107.0dip" android:layout_height="34.0dip" android:text="@string/confirmCancle" android:layout_alignParentRight="true" />
    </RelativeLayout>
</LinearLayout>