<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@drawable/shape_circle_corner_white" android:layout_width="270.0dip" android:layout_height="wrap_content" android:layout_centerInParent="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/activity_recommend_for_me_container" android:background="@drawable/shape_circle_corner_white" android:padding="20.0dip" android:layout_width="fill_parent" android:layout_height="400.0dip">
        <TextView android:textColor="@color/low_black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/courseInfo" />
        <LinearLayout android:orientation="vertical" android:background="@drawable/shape_circle_corner_white_stroke_grey" android:padding="2.0dip" android:layout_width="fill_parent" android:layout_height="34.0dip" android:layout_marginTop="8.0dip" android:layout_marginBottom="8.0dip">
            <EditText android:textColor="@color/middle_black" android:id="@id/activity_recommend_for_me_edit_courseName" android:background="@null" android:layout_width="fill_parent" android:layout_height="fill_parent" android:cursorVisible="true" android:maxLength="10" />
        </LinearLayout>
        <TextView android:textColor="@color/low_black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/studyType" />
        <RelativeLayout android:background="@drawable/shape_circle_corner_white_stroke_grey" android:layout_width="fill_parent" android:layout_height="33.0dip" android:layout_marginTop="8.0dip" android:layout_marginBottom="8.0dip">
            <Spinner android:id="@id/activity_recommend_for_me_spinner" android:background="@null" android:layout_width="fill_parent" android:layout_height="fill_parent" />
            <ImageView android:layout_width="10.0dip" android:layout_height="6.0dip" android:layout_marginRight="10.0dip" android:src="@drawable/ic_lightgray_dropdown" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        </RelativeLayout>
        <TextView android:textColor="@color/low_black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/yourInfo" />
        <LinearLayout android:orientation="vertical" android:background="@drawable/shape_circle_corner_white_stroke_grey" android:layout_width="fill_parent" android:layout_height="88.0dip" android:layout_marginTop="8.0dip" android:layout_marginBottom="8.0dip">
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:padding="2.0dip" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
                <EditText android:textSize="14.0sp" android:textColor="@color/middle_black" android:id="@id/activity_recommend_for_me_edit_name" android:background="@null" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="10.0dip" android:hint="@string/Name" android:cursorVisible="true" android:maxLength="8" />
            </LinearLayout>
            <TextView android:background="@color/stroke_grey" android:layout_width="fill_parent" android:layout_height="1.0px" />
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:padding="2.0dip" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
                <EditText android:textSize="14.0sp" android:textColor="@color/middle_black" android:id="@id/activity_recommend_for_me_edit_phone" android:background="@null" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="10.0dip" android:hint="@string/phone" android:cursorVisible="true" android:maxLength="12" android:inputType="number" />
            </LinearLayout>
        </LinearLayout>
        <Button android:textColor="@color/white" android:id="@id/activity_recommend_for_me_btn_recommend" android:background="@drawable/style_btn_register" android:layout_width="fill_parent" android:layout_height="44.0dip" android:text="@string/recommendForMe" />
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="44.0dip" android:layout_marginTop="10.0dip">
            <Button android:id="@id/activity_recommend_for_me_btn_call" android:background="@drawable/style_btn_login" android:layout_width="fill_parent" android:layout_height="fill_parent" />
            <ImageView android:id="@id/activity_recommend_for_me_img_phone" android:layout_width="34.0dip" android:layout_height="34.0dip" android:layout_marginLeft="15.0dip" android:src="@drawable/ic_small_white_yuan_phone" android:layout_centerVertical="true" />
            <TextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/serviceTel" android:layout_toRightOf="@id/activity_recommend_for_me_img_phone" android:layout_centerInParent="true" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>